--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: bookman, sans-serif;
+    font-family: Bookman Old Style, serif;
     padding: 0%;
     margin: 0%;
 }
@@ -9,7 +9,7 @@ body {
 }
 
 #banner {
-    background-color: lightgrey;
+    background-color: rgba(211, 211, 211, 0.529);
     width: 20%;
     /* height: 2em; */
     /* height: 10%; */
@@ -25,9 +25,9 @@ body {
 #large-image {
     margin: -.25em 0em 0em 0em;
     /* background-color: gray; */
-    background-position-y: center;
-    height: 50vh;
-    background-image: url("images/people\ drinking\ coca\ cola.jpeg");
+    background-position-y: top;
+    height: 60vh;
+    background-image: url("images/people\ drinking\ coca\ cola2.jpg");
     background-size: cover;
     /* position: absolute; */
     width: 100%;
@@ -35,9 +35,16 @@ body {
 
 .info {
     padding: .5em 2em;
+    background-color: whitesmoke;
+    color: rgb(74, 74, 74);
 }
 
 .full-width {
     display: block;
     position: relative;
+}
+
+#history {
+    background-color: rgb(179, 1, 1);
+    color: whitesmoke;
 }
