--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,16 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab|Lobster+Two&display=swap');
 body {
-    font-family: Bookman Old Style, serif;
+    font-family: Roboto Slab, Bookman Old Style, serif;
     padding: 0%;
     margin: 0%;
     /* background-image: url("images/red-snow-background.jpg");
     background-size: cover; */
     background-color: whitesmoke;
+}
+
+p {
+    font-family: 'Roboto', sans-serif;
+    opacity: .8;
 }
 
 #banner {
@@ -49,6 +55,16 @@ body {
     #large-image {
         height: 30vh;
     }
+}
+
+#history h2 {
+    font-family: 'Lobster Two', cursive;
+    font-size: 3em;
+    margin: 1rem 0% 0% 0%;
+}
+
+h3 {
+    opacity: .6;
 }
 
 
